# devmate

./: .gitignore  README.md  debug_labels.py  mate.spec  pyproject.toml  requirement.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: __init__.py  main.py
app/commands/: __init__.py  clone.py  deploy.py  down.py  health.py  init.py  logs.py  shell.py  status.py  up.py
app/commands/docs/: docs.py
app/commands/docs/content/: clone.md  deploy.md  down.md  health.md  init.md  logs.md  main.md  shell.md  status.md  up.md  workflow.md
app/services/: __init__.py  docker_svc.py  git_svc.py  net_svc.py  yaml_svc.py
app/servicies/: __init__.py
app/utils/: __init__.py  ui.py  verbose.py
