[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmate"
version = "0.3.1"
description = "The friendly internal developer platform CLI."
dependencies = [
    "typer[all]",
    "rich",  
    "python-on-whales",
    "requests",
    "GitPython",
    "PyYAML"
]
requires-python = ">=3.10"

[project.scripts]
devmate = "app.main:app"
devctl = "app.main:app"
mate = "app.main:app"