[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devmate"
version = "1.0.2"
description = "The friendly internal developer platform CLI."
dependencies = [
    "typer[all]",
    "rich",  
    "python-on-whales",
    "requests",
    "charset-normalizer",
    "GitPython",
    "PyYAML"
]
requires-python = ">=3.10"

[project.scripts]
mate = "app.main:app"